@@ -1,9 +1,10 @@
-# The original name of the software packae is 'xforms' but the
-# rpm package goes by the name 'libforms'.
+# The original name of the software package is 'xforms' but the
+# rpm packages go by the name 'libforms' in all distros. We need
+# the original name in some situations.
 
 %define origname @PACKAGE@
 
-# Building a debug package doesn't seem to make much sense
+# Building a debug package doesn't seem to make too much sense
 
 %define debug_package %{nil}
 
@@ -18,11 +19,10 @@ Source0:         %{name}-%{version}.tar.gz
 License:         LGPLv2+
 Group:           Development/Libraries
 
-# To build the libraries and prgrams we need these packages to be installed
+# To build the libraries we need the libXpm and libjpeg development
+# packages (which in turn depend on the corresponding library packages)
 
-BuildRequires:   libXpm
 BuildRequires:   libXpm-devel
-BuildRequires:   libjpeg
 BuildRequires:   libjpeg-devel
 
 BuildRoot:       %{_tmppath}/%{name}-buildroot
@@ -51,14 +51,14 @@ Requires:        %{name} = %{version}-%{release}
 Header files, tools and static libraries for development with XForms.
 
 
-# Also create a documentation package with the full documenttaion in
+# Also create a documentation package with the full documentation in
 # info, HTML and PDF format. This is an architecture-independent
 # package.
 #
-# Note: older rpmbuild versions get very unhapppy when you try to build
-# a 'noarch' sub-package together with architecture-dependend packages,
-# spitting out weird error messages and refusing to build the packages,
-# so use 'noarch' only with newer versions.
+# Note: older rpmbuild versions get very unhappy when you try to build
+# a 'noarch' sub-package together with architecture-dependent packages,
+# spitting out weird error messages and refusing to build the package,
+# so use 'noarch' only with newer versions of rpmbuild.
 
 %package doc
 Summary:         XForms documentation
@@ -69,7 +69,7 @@ BuildRequires:   texi2html
 BuildRequires:   texinfo
 BuildRequires:   texinfo-tex
 BuildRequires:   ImageMagick
-%if 0%{?fedora} >= 10 || 0%{?rhel} >= 6 || 0%{?centos} >= 6
+%if 0%{?fedora} >= 10 || 0%{?rhel} >= 6 || 0%{?centos} >= 6 || 0%{?suse_version} >= 1230
 BuildArch:       noarch
 %endif
 
@@ -77,7 +77,7 @@ BuildArch:       noarch
 Info, HTML, PDF documentation and demo programs for XForms.
 
 
-# Unpack the tar-ball
+# Copy and unpack the tar-ball
 
 %prep
 %setup -q
@@ -102,14 +102,14 @@ make %{?_smp_mflags}
 
 # Clear out the {buildroot} and install everything in {buildroot},
 # then apply the following tweaks:
-#  1) Telete the dir file from {_infodir}, it's not to be distributed
+#  1) Delete the dir file from {_infodir}, it's not to be distributed
 #     and gets created (or updated) during installation on the target
 #     machine.
 #  2) Strip the fdesign and fd2ps programs
 #  3) Copy the directory with the demo programs to the documentation
 #     directory
 #  4) Create a symbolic link from the xforms.5 man page to libforms.5
-#     (do that in a subprocess to avoid changing the working directory).
+#     (do that in a sub-process to avoid changing the working directory).
 
 %install
 rm -rf %{buildroot}
@@ -193,7 +193,8 @@ fi
 
 %changelog
 * Sat Dec 21 2013  Jens Thoms Toerring <jt@toerring.de> 1.1.2.0-1
-- Spec file mostly rewritten for new 1.2.0 release
+- spec file mostly rewritten for new 1.2.0 release, resulting
+  packages now have a name starting with 'libforms'
 
 * Thu Jun 1 2010 Jens Thoms Toerring <jt@toerring.de> 1.0.93sp1
 - New release 1.0.93sp1
